# harp-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
hifi-cli/: Cargo.toml
hifi-cli/src/: main.rs
hifi-core/: Cargo.toml
hifi-core/src/: api.rs  models.rs
