[package]
name = "hifi-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
hifi-core = { path = "../hifi-core" }
anyhow = "1"
ratatui = "0.30.0"
crossterm = "0.29.0"
urlencoding = "2.1"
viuer = "0.11.0"
image = "0.25"
bytes = "1.11.1"
