[package]
name = "hifi-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"] }
urlencoding = "2.1.3"
